fixed p align

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -98,7 +98,6 @@ nav {
     padding-bottom: $padding-medium;
     max-width: 80%;
     margin: 0 auto;
-    p,
     h2 {
         text-align: center;
     }
